# one-more-episode

./: .common.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  start.bash  store.py
docs/kp-api/: collections-with-series.json  onboarding.json
src/: consts.py  index.html  settings.py
src/application/: configs.py  errors.py  pipeline.py  utils.py
src/application/commands/: __init__.py  create_user.py  like_item.py  message.py  personal_meta.py  search_stage_meta.py  similarity.py
src/application/di/: container.py
src/application/dtos/: __init__.py  kp_media_item.py  telegram.py
src/application/services/: __init__.py  embeddings_factory.py  kinopoisk_loader.py  series_recommendation.py  user_interaction.py
src/application/stages/: __init__.py  errors.py  filter_by_rating.py  filter_without_image.py  get_collection.py  get_onboarding_collection_v1.py  get_search_recommendations.py  get_user_bookmarks.py  load_item_features.py  set_collection.py
src/application/use_cases/: __init__.py  create_user.py  item_features.py  like_item.py
src/domain/: logger.py
src/domain/models/: __init__.py  item.py  user.py  user_item.py
src/domain/pipeline/: __init__.py  builder.py  stage.py
src/infrastructure/: log.py  settings.py
src/interface/: settings.py
templates/: bookmarks.html  onboarding.html  onboarding1.html  page.html  rails.html  search.html
tests/: conftest.py  docker-compose.yaml  utils.py
tests/integration/: test_redis_client.py
tests/unit/: test_media_item.py  test_utils.py
(+29 files in other folders)
